--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,8 @@
   "extends": ["airbnb", "prettier"],
   "rules": {
     "react/jsx-filename-extension": [0],
-    "react/jsx-props-no-spreading": 0
+    "react/jsx-props-no-spreading": 0,
+    "no-undef": 0,
+    "no-alert": 0
   }
 }
